--- a/cad-Frontend/src/app/app.component.html
+++ b/cad-Frontend/src/app/app.component.html
@@ -303,6 +303,9 @@
     />
   </svg>
 </div>
+<div>
+  <button (click)="login()">Login</button>
+</div>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
