--- a/cad-Frontend/src/app/components/dashboard/dashboard.component.html
+++ b/cad-Frontend/src/app/components/dashboard/dashboard.component.html
@@ -25,6 +25,11 @@
               <i class="fas fa-user"></i>User Profile
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./capture-workout">
+              <i class="fas fa-dumbbell"></i>Capture Workout
+            </a>
+          </li>
           <!-- Calling SignOut() Api from AuthService -->
           <li class="nav-item">
             <a class="nav-link" (click)="authService.SignOut()">
