--- a/cad-Frontend/src/app/components/dashboard/dashboard.component.html
+++ b/cad-Frontend/src/app/components/dashboard/dashboard.component.html
@@ -27,7 +27,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="./capture-workout">
-              <i class="fas fa-dumbbell"></i>Capture Workout
+              <i class="fas fa-pen"></i>Capture Workout
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./workouts">
+              <i class="fas fa-dumbbell"></i>Workouts
             </a>
           </li>
           <!-- Calling SignOut() Api from AuthService -->
