--- a/cad-Frontend/src/app/components/dashboard/dashboard.component.html
+++ b/cad-Frontend/src/app/components/dashboard/dashboard.component.html
@@ -35,6 +35,11 @@
               <i class="fas fa-dumbbell"></i>Workouts
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="./workout-plan">
+              <i class="fas fa-calendar"></i>Create Workout Plan
+            </a>
+          </li>
           <!-- Calling SignOut() Api from AuthService -->
           <li class="nav-item">
             <a class="nav-link" (click)="authService.SignOut()">
