--- a/cad-Frontend/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/cad-Frontend/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -23,14 +23,14 @@
           type="submit"
           class="btn btnPrimary"
           value="Reset Password"
-          (click)="authService.ForgotPassword(passwordResetEmail.value)"
+          (click)="authService.forgotPassword(passwordResetEmail.value)"
         />
       </div>
     </div>
 
     <div class="redirectToLogin">
       <span
-        >Go back to ?
+      >Go back to ?
         <span class="redirect" routerLink="/sign-in">Log In</span></span
       >
     </div>
