--- a/cad-Frontend/src/styles.scss
+++ b/cad-Frontend/src/styles.scss
@@ -662,5 +662,11 @@ body .table thead th {
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
