--- a/cad-Frontend/src/app/components/auth/verify-email/verify-email.component.html
+++ b/cad-Frontend/src/app/components/auth/verify-email/verify-email.component.html
@@ -6,7 +6,7 @@
       <div class="formGroup" *ngIf="authService.userData as user">
         <p class="text-center">
           We have sent a confirmation email to <strong>{{ user.email }}</strong
-          >.
+        >.
         </p>
         <p class="text-center">
           Please check your email and click on the link to verfiy your email
@@ -19,7 +19,7 @@
         <button
           type="button"
           class="btn btnPrimary"
-          (click)="authService.SendVerificationMail()"
+          (click)="authService.sendVerificationMail()"
         >
           <i class="fas fa-redo-alt"></i>
           Resend Verification Email
@@ -29,9 +29,9 @@
 
     <div class="redirectToLogin">
       <span
-        >Go back to?<span class="redirect" routerLink="/sign-in">
+      >Go back to?<span class="redirect" routerLink="/sign-in">
           Sign in</span
-        ></span
+      ></span
       >
     </div>
   </div>
