--- a/cad-Frontend/src/app/components/auth/sign-up/sign-up.component.html
+++ b/cad-Frontend/src/app/components/auth/sign-up/sign-up.component.html
@@ -33,17 +33,8 @@
           <input
             type="text"
             class="formControl"
-            placeholder="First Name"
-            formControlName="firstName"
-          />
-        </div>
-
-        <div class="formGroup">
-          <input
-            type="text"
-            class="formControl"
-            placeholder="Surname"
-            formControlName="surname"
+            placeholder="Name"
+            formControlName="displayName"
           />
         </div>
 
@@ -51,7 +42,7 @@
           <div *ngSwitchCase="roles.USER">
             <mat-form-field class="example-full-width">
               <mat-label>Gym</mat-label>
-              <mat-select>
+              <mat-select formControlName="tenantId">
                 <mat-option
                   *ngFor="let gym of gyms$ | async"
                   [value]="gym.tenantId"
@@ -75,7 +66,7 @@
             </mat-form-field>
           </div>
           <div *ngSwitchCase="roles.GYMOWNER">
-            <h3>Gym Data</h3>
+            <h3 style="text-align: left">Gym</h3>
             <div class="formGroup">
               <input
                 type="text"
